--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "accordion": "^3.0.2",
     "accordion-js": "^3.3.4",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
     "izitoast": "^1.4.0",
     "swiper": "^11.1.4",
